# CVV

ccv_ex03_solution/: CMakeLists.txt
ccv_ex03_solution/src/: filter.cpp
ccv_ex04_solution_fixed/: CMakeLists.txt
ccv_ex04_solution_fixed/include/: gauss_pyr.h
ccv_ex04_solution_fixed/src/: contrasts.cpp  gauss_pyr.cpp
ccv_ex05_solution/: CMakeLists.txt  README.txt
ccv_ex05_solution/include/: gauss_pyr.h
ccv_ex05_solution/src/: orientation_test.cpp
ccv_ex06_solution/: CMakeLists.txt
project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  saliency_project_main
project/include/: laplacian_pyr.h  oriented_pyr.h
project/src/: contrasts.cpp  fusion.cpp  gabor.cpp  gauss_pyr.cpp  laplacian_pyr.cpp  main.cpp  oriented_pyr.cpp  pyramid.cpp
